more minor tweaks

--- a/index.html
+++ b/index.html
@@ -621,7 +621,6 @@
                         <h3 class="contact-subtitle">Connect</h3>
                         
                         <div class="contact-info-content">
-
                             <div class="social-links">
                                 <a href="https://github.com/rgdonohue" class="social-link" target="_blank">
                                     <svg class="social-icon" fill="currentColor" viewBox="0 0 24 24">
@@ -636,6 +635,11 @@
                                     </svg>
                                     Instagram
                                 </a>
+                            </div>
+                            
+                            <!-- Contact Logo -->
+                            <div class="contact-logo">
+                                <img src="images/logo-large.png" alt="Small Batch Maps detailed compass logo" class="contact-logo-image" loading="lazy">
                             </div>
                         </div>
                     </div>
