--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <section id="services" class="services" aria-labelledby="services-title">
         <div class="container">
             <h2 id="services-title" class="section-title">My Services &amp; Expertise</h2>
-            <p class="section-subtitle">AI-assisted GIS solutions with a human touch</p>
+            <p class="section-subtitle">AI-enhanced spatial workflows, guided by 💜 & domain expertise </p>
             
             <div class="services-grid" role="group" aria-labelledby="services-title">
                 <!-- Service Card 1 -->
@@ -102,7 +102,7 @@
                     </div>
                     <h3 class="service-title">Geospatial Data Science</h3>
                     <p class="service-description">
-                        I use Python, libraries such as geopandas, and Jupyter notebooks to turn messy, inconsistent geospatial data into transparent, decision-ready intelligence. Whether wrangling shapefiles full of null values or identifying trends across thousands of records, I build reproducible workflows that reveal the patterns others miss. 
+                        I use Python, libraries such as geopandas, and Jupyter notebooks to turn messy, inconsistent geospatial data into transparent, decision-ready intelligence. Whether wrangling shapefiles full of null values or identifying trends across thousands of records, I build reproducible workflows that uncover spatial patterns and inconsistencies using reproducible, code-first methods. 
                     </p>
 
                     <button class="learn-more-btn" data-service="geospatial" aria-expanded="false" aria-controls="geospatial-content" aria-describedby="geospatial-desc">
@@ -122,7 +122,7 @@
                     </div>
                     <h3 class="service-title">Web Cartography</h3>
                     <p class="service-description">
-                        With a background in UX design and spatial storytelling, I create web maps and dashboards that look sharp, load fast, and connect with real users. Whether it's a climate dashboard or a conservation advocacy tool, I blend visual clarity with emotional impact—so your audience sees not just the data, but what it means.
+                        With a background in UX design and spatial storytelling, I create web maps and dashboards that look sharp, load fast, and connect with real users. Whether it's a climate dashboard or a conservation advocacy tool, I design cartographic interfaces that support action in addtion to exploration.
                     </p>
                     <button class="learn-more-btn" data-service="cartography" aria-expanded="false" aria-controls="cartography-content" aria-describedby="cartography-desc">
                         Learn More
@@ -145,7 +145,7 @@
                     </div>
                     <h3 class="service-title">AI-Assisted Workflows</h3>
                     <p class="service-description">
-                        I integrate cutting-edge tools—like large language models (LLMs), spatial automations, and intelligent agents—into GIS workflows to save time, reduce friction, and scale impact. From code-writing copilots to automated report generators, I design systems that do more with less effort—without compromising clarity or control.
+                        I integrate cutting-edge tools—like large language models (LLMs), spatial automations, and intelligent agents—into GIS workflows to save time, reduce friction, and scale impact. From code-writing copilots to automated report generators, I design systems that scale routine GIS workflows without sacrificing custom logic or data integrity.
                     </p>
                     <button class="learn-more-btn" data-service="ai-workflows" aria-expanded="false" aria-controls="ai-workflows-content" aria-describedby="ai-workflows-desc">
                         Learn More
@@ -273,138 +273,39 @@
                 <!-- Web Cartography Content -->
                 <div id="cartography-content" class="expansion-content hidden">
                     <div class="cartography-expansion">
-                        <!-- Topographic Background -->
-                        <div class="topo-background" aria-hidden="true"></div>
-                        
                         <!-- Section Intro -->
                         <div class="carto-header">
-                            <p class="carto-intro">Create compelling, interactive web maps and dashboards that transform complex spatial data into clear, engaging visual stories. I specialize in custom cartographic solutions that combine aesthetic appeal with functional excellence.</p>
+                            <p class="carto-intro">I design and build interactive maps and dashboards that translate geospatial data into clear, compelling visual stories. Rooted in cartographic design and GIS fluency, my tools support everything from field-ready maps to high-performance dashboards. Whether you're visualizing terrain models, wildfire recovery, or real-time sensor feeds, I help your data speak clearly across all devices.</p>
                         </div>
 
-                        <!-- Hero Feature Card -->
-                        <div class="hero-feature-container">
-                            <div class="trail-connector trail-start" aria-hidden="true"></div>
-                            <article class="capability-card hero-card">
-                                <div class="card-elevation" aria-hidden="true"></div>
-                                <div class="capability-icon hero-icon">
-                                    <svg class="icon" fill="currentColor" viewBox="0 0 24 24" role="img" aria-label="Interactive web maps icon">
-                                        <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/>
-                                        <circle cx="12" cy="12" r="3"/>
-                                        <path d="M12 1L8.41 4.59L12 8.18L15.59 4.59L12 1z"/>
-                                        <path d="M12 15.82L8.41 19.41L12 23L15.59 19.41L12 15.82z"/>
-                                        <path d="M15.82 12L19.41 8.41L23 12L19.41 15.59L15.82 12z"/>
-                                        <path d="M8.18 12L4.59 8.41L1 12L4.59 15.59L8.18 12z"/>
-                                    </svg>
-                                </div>
-                                <h3 class="capability-title">Interactive Web Maps</h3>
-                                <p class="capability-description">Custom-built interactive maps using modern libraries like MapLibre GL JS, Leaflet, and Mapbox. Optimized for performance and user experience across all devices with dynamic layer switching, real-time data integration, and smooth pan/zoom interactions.</p>
-                                <div class="feature-badges">
-                                    <span class="badge">Real-time Data</span>
-                                    <span class="badge">Multi-layer</span>
-                                    <span class="badge">Mobile-first</span>
-                                </div>
-                            </article>
-                        </div>
-
-                        <!-- Staggered Timeline Cards -->
-                        <div class="timeline-container">
-                            <!-- Card 1 - Left -->
-                            <div class="timeline-item left">
-                                <div class="timeline-connector" aria-hidden="true">
-                                    <div class="connector-node"></div>
-                                    <div class="connector-line"></div>
-                                </div>
-                                <article class="capability-card">
-                                    <div class="card-elevation" aria-hidden="true"></div>
-                                    <div class="capability-icon">
-                                        <svg class="icon" fill="currentColor" viewBox="0 0 24 24" role="img" aria-label="Data visualization dashboard icon">
-                                            <path d="M3 13h2v-2H3v2zm0 4h2v-2H3v2zm0-8h2V7H3v2zm4 4h14v-2H7v2zm0 4h14v-2H7v2zM7 7v2h14V7H7z"/>
-                                            <circle cx="19" cy="12" r="2"/>
-                                            <path d="M12 8L10 6H8L12 10L16 6H14L12 8Z"/>
-                                        </svg>
+                        <!-- Core Capabilities -->
+                        <div class="capabilities-section">
+                            <h3 class="capabilities-title">Core Capabilities</h3>
+                            <div class="capabilities-grid">
+                                <div class="capability-column">
+                                    <div class="capability-item">
+                                        <h4>Spatial Dashboards</h4>
+                                        <p>Custom interfaces for exploring complex geospatial datasets — optimized for clarity, performance, and decision-making.</p>
                                     </div>
-                                    <h4 class="capability-title">Data Visualization Dashboards</h4>
-                                    <p class="capability-description">Comprehensive dashboards that integrate multiple data sources, real-time updates, and interactive controls for exploring complex spatial datasets.</p>
-                                </article>
-                            </div>
-
-                            <!-- Card 2 - Right -->
-                            <div class="timeline-item right">
-                                <div class="timeline-connector" aria-hidden="true">
-                                    <div class="connector-node"></div>
-                                    <div class="connector-line"></div>
-                                </div>
-                                <article class="capability-card">
-                                    <div class="card-elevation" aria-hidden="true"></div>
-                                    <div class="capability-icon">
-                                        <svg class="icon" fill="currentColor" viewBox="0 0 24 24" role="img" aria-label="Responsive design icon">
-                                            <path d="M17 1H7c-1.1 0-2 .9-2 2v18c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-2-2-2zM7 4V3h10v1H7zm0 14V6h10v12H7zm0 3v-1h10v1H7z"/>
-                                            <rect x="9" y="8" width="6" height="4"/>
-                                            <path d="M12 13L10 15H14L12 13Z"/>
-                                        </svg>
+                                    <div class="capability-item">
+                                        <h4>Cartographic Map Design</h4>
+                                        <p>Tailored map styles, symbology, and interactions that reinforce your data story and visual identity.</p>
                                     </div>
-                                    <h4 class="capability-title">Responsive Design</h4>
-                                    <p class="capability-description">Mobile-first approach ensuring your maps and applications work seamlessly across desktop, tablet, and mobile devices with intuitive touch controls.</p>
-                                </article>
-                            </div>
-
-                            <!-- Card 3 - Left -->
-                            <div class="timeline-item left">
-                                <div class="timeline-connector" aria-hidden="true">
-                                    <div class="connector-node"></div>
-                                    <div class="connector-line"></div>
                                 </div>
-                                <article class="capability-card">
-                                    <div class="card-elevation" aria-hidden="true"></div>
-                                    <div class="capability-icon">
-                                        <svg class="icon" fill="currentColor" viewBox="0 0 24 24" role="img" aria-label="Custom styling and branding icon">
-                                            <path d="M12 3c-4.97 0-9 4.03-9 9s4.03 9 9 9c.83 0 1.5-.67 1.5-1.5 0-.39-.15-.74-.39-1.01-.23-.26-.38-.61-.38-.99 0-.83.67-1.5 1.5-1.5H16c2.76 0 5-2.24 5-5 0-4.42-4.03-8-9-8z"/>
-                                            <circle cx="6.5" cy="11.5" r="1.5"/>
-                                            <circle cx="9.5" cy="7.5" r="1.5"/>
-                                            <circle cx="14.5" cy="7.5" r="1.5"/>
-                                            <circle cx="17.5" cy="11.5" r="1.5"/>
-                                        </svg>
+                                <div class="capability-column">
+                                    <div class="capability-item">
+                                        <h4>Real-Time &amp; Multi-Source Data</h4>
+                                        <p>Integrates live feeds, raster imagery, and vector data for dynamic visualizations.</p>
                                     </div>
-                                    <h4 class="capability-title">Custom Styling &amp; Branding</h4>
-                                    <p class="capability-description">Tailored visual design that matches your brand identity, including custom map styles, color schemes, and user interface elements.</p>
-                                </article>
-                            </div>
-                        </div>
-
-
-
-                        <!-- Project Applications -->
-                        <div class="applications-showcase">
-                            <h4 class="applications-title">Project Applications</h4>
-                            <div class="applications-cards">
-                                <div class="app-card">
-                                    <div class="app-icon">🏢</div>
-                                    <span>Real Estate Platforms</span>
-                                </div>
-                                <div class="app-card">
-                                    <div class="app-icon">🌿</div>
-                                    <span>Environmental Monitoring</span>
-                                </div>
-                                <div class="app-card">
-                                    <div class="app-icon">🚌</div>
-                                    <span>Public Transit Apps</span>
-                                </div>
-                                <div class="app-card">
-                                    <div class="app-icon">📊</div>
-                                    <span>Business Intelligence</span>
-                                </div>
-                                <div class="app-card">
-                                    <div class="app-icon">📚</div>
-                                    <span>Educational Tools</span>
-                                </div>
-                                <div class="app-card">
-                                    <div class="app-icon">🚨</div>
-                                    <span>Emergency Response</span>
+                                    <div class="capability-item">
+                                        <h4>Responsive Geovisual UX</h4>
+                                        <p>Map UIs that work intuitively across desktop, tablet, and mobile, with smooth gestures and thoughtful controls.</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
 
-                        <!-- CTA Section -->
+                        <!-- Call-to-Action -->
                         <div class="carto-cta-section">
                             <div class="carto-cta-buttons">
                                 <button class="cta-button cta-primary" onclick="scrollToSection('contact')">
@@ -423,7 +324,7 @@
                     <div class="ai-workflows-expansion">
                         <!-- Section Intro -->
                         <div class="ai-header">
-                            <p class="ai-intro">I design and implement <strong>agentic workflows</strong>—modular, AI-augmented systems where humans and AI collaborate across the entire software lifecycle. This isn't just automation; it's intelligent partnership that amplifies capabilities while maintaining control. Whether automating repetitive GIS tasks, generating code, or creating dynamic map styles, I help you build systems that do more with less effort while keeping you in charge of the important decisions.</p>
+                            <p class="ai-intro">I design and implement <span class="tooltip-wrapper"><strong>agentic workflows</strong><span class="tooltip">Agentic = collaborative systems where humans and AI actively co-create outputs</span></span> &ndash; modular, AI-augmented systems where humans and AI collaborate across the entire software lifecycle. This isn't just automation; it's intelligent partnership that amplifies capabilities while maintaining control. Whether automating repetitive GIS tasks, generating code, or creating dynamic map styles, I help you build systems that do more with less effort while keeping you in charge of the important decisions.</p>
                         </div>
 
                         <!-- Simple Benefits Grid -->
@@ -648,7 +549,7 @@
                         </svg>
                     </div>
                     <h3 class="project-title">DEM Hillshade Generator</h3>
-                    <p class="project-description">Python tool for processing Digital Elevation Models to create beautiful colored hillshade terrain visualizations</p>
+                    <p class="project-description">Python tool for processing Digital Elevation Models to g</p>
                 </article>
                 <article class="project-item" role="button" tabindex="0" onclick="window.open('https://github.com/rgdonohue/tilecraft', '_blank')" onkeydown="SBM.handleProjectKeydown(event, 'https://github.com/rgdonohue/tilecraft')" aria-label="View Tilecraft project on GitHub">
                     <div class="project-icon" aria-hidden="true">
@@ -659,7 +560,7 @@
                         </svg>
                     </div>
                     <h3 class="project-title">Tilecraft</h3>
-                    <p class="project-description">AI-assisted CLI tool for generating beautiful vector tiles from OpenStreetMap data</p>
+                    <p class="project-description">AI-assisted CLI tool for generating context-aware vector tile styles from OpenStreetMap datadriven by natural language input</p>
                 </article>
             </div>
         </div>
