tweak ai-assisted section

--- a/index.html
+++ b/index.html
@@ -404,52 +404,26 @@
                         <div class="ai-workflows-expansion">
                             <!-- Section Intro -->
                             <div class="ai-header">
-                                <p class="ai-intro">I design and implement <span class="tooltip-wrapper"><strong>agentic
-                                            workflows</strong><span class="tooltip">Agentic = collaborative systems
-                                            where humans and AI actively co-create outputs</span></span> &ndash;
-                                    modular, AI-augmented systems where humans and AI collaborate across the entire
-                                    software lifecycle. This isn't just automation; it's intelligent partnership that
-                                    amplifies capabilities while maintaining control. Whether automating repetitive GIS
-                                    tasks, generating code, or creating dynamic map styles, I help you build systems
-                                    that do more with less effort while keeping you in charge of the important
-                                    decisions.</p>
-                            </div>
-
-                            <!-- Simple Benefits Grid -->
-                            <div class="benefits-showcase">
-                                <h4 class="benefits-title">Key Benefits</h4>
-                                <div class="benefits-grid">
-                                    <div class="benefit-card">
-                                        <div class="benefit-icon">
-                                            <i class="ph ph-rocket"></i>
-                                        </div>
-                                        <h5>Reduced GIS Processing Time</h5>
-                                        <p>Automate data pipeline tasks like schema validation and styling, cutting
-                                            processing time by 60-80%</p>
+                                <div class="ai-content-grid">
+                                    <div class="ai-left-content">
+                                        <p class="ai-intro">I design and implement <span class="tooltip-wrapper"><strong>agentic
+                                                    workflows</strong><span class="tooltip">Agentic = collaborative systems
+                                                    where humans and AI actively co-create outputs</span></span> &ndash;
+                                            modular, AI-augmented systems that integrate human insight with machine efficiency
+                                            across the GIS lifecycle. This isn’t generic automation; it’s about building tools
+                                            that help experts stay in control while offloading the tedious or brittle parts of
+                                            spatial analysis and cartographic production.</p>
+                                        <p class="ai-intro">These tools don’t replace domain expertise—they extend it. My role is to design systems where AI and human collaborators complement each other, resulting in faster iteration, clearer outputs, and lower cognitive overhead.</p>
                                     </div>
-                                    <div class="benefit-card">
-                                        <div class="benefit-icon">
-                                            <i class="ph ph-target"></i>
-                                        </div>
-                                        <h5>Domain Expert + AI Efficiency</h5>
-                                        <p>Combine deep cartographic knowledge with AI acceleration for superior
-                                            geospatial solutions</p>
-                                    </div>
-                                    <div class="benefit-card">
-                                        <div class="benefit-icon">
-                                            <i class="ph ph-shield-check"></i>
-                                        </div>
-                                        <h5>Enterprise-Grade Reliability</h5>
-                                        <p>Robust error handling, comprehensive testing, and detailed documentation for
-                                            production systems</p>
-                                    </div>
-                                    <div class="benefit-card">
-                                        <div class="benefit-icon">
-                                            <i class="ph ph-stack"></i>
-                                        </div>
-                                        <h5>Modular Architecture</h5>
-                                        <p>Composable components that integrate seamlessly with existing GIS
-                                            infrastructure and workflows</p>
+                                    <div class="ai-right-content">
+                                        <h4 class="llm-applications-title">In practice this means using large language models to:</h4>
+                                        <ul class="llm-applications-list">
+                                            <li>Validate or refactor geospatial code</li>
+                                            <li>Scaffold API endpoints or test suites</li>
+                                            <li>Generate symbology styles from structured prompts</li>
+                                            <li>Document spatial analysis pipelines</li>
+                                            <li>Catch logic gaps in workflows or suggest optimizations</li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
