--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
     <section id="services" class="services" aria-labelledby="services-title">
         <div class="container">
             <h2 id="services-title" class="section-title">My Services &amp; Expertise</h2>
-            <p class="section-subtitle">AI-enhanced spatial workflows, guided by <i class="ph ph-heart-fill"
-                    style="color: var(--terracotta);" aria-label="heart"></i> & domain expertise </p>
+            <p class="section-subtitle">AI-enhanced spatial workflows, guided by care &amp; domain expertise </p>
 
             <div class="services-grid" role="group" aria-labelledby="services-title">
                 <!-- Service Card 1 -->
@@ -406,14 +405,9 @@
                             <div class="ai-header">
                                 <div class="ai-content-grid">
                                     <div class="ai-left-content">
-                                        <p class="ai-intro">I design and implement <span class="tooltip-wrapper"><strong>agentic
-                                                    workflows</strong><span class="tooltip">Agentic = collaborative systems
-                                                    where humans and AI actively co-create outputs</span></span> &ndash;
-                                            modular, AI-augmented systems that integrate human insight with machine efficiency
-                                            across the GIS lifecycle. This isn’t generic automation; it’s about building tools
-                                            that help experts stay in control while offloading the tedious or brittle parts of
-                                            spatial analysis and cartographic production.</p>
-                                        <p class="ai-intro">These tools don’t replace domain expertise—they extend it. My role is to design systems where AI and human collaborators complement each other, resulting in faster iteration, clearer outputs, and lower cognitive overhead.</p>
+                                        <p class="ai-intro">I approach large language models—and the sprawling ecosystem around them—with a mix of curiosity and caution. While the hype around agents, multi-component pipelines, and prompt engineering grows louder, I’ve taken a quieter path: small-scale, high-integrity experiments that test what these tools can actually do in practice.</p>
+                                        <p class="ai-intro">Through hands-on projects like FlowFinder, Tilecraft, and my ongoing Semantic Land Use Lookup, I’m building fluency in LLM-enhanced development—exploring context management, retrieval pipelines, and modular AI systems (MCPs) in ways that stay grounded, not grandiose. No VC decks. No techno-theology. Just iterative, mindful design.</p>
+                                        <p class="ai-intro">I see LLMs not as magic bullets but as collaborators—helpful when well scoped, dangerous when unexamined. I’m committed to staying technically agile and strategically skeptical as the AI landscape evolves. The bubble may burst (it always does), but the skills I’m cultivating now—system design, ethical reflection, composable workflows—will outlast any trend.</p>
                                     </div>
                                     <div class="ai-right-content">
                                         <h4 class="llm-applications-title">In practice this means using large language models to:</h4>
