try and add workflow image

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <nav class="nav" role="navigation" aria-label="Main navigation">
             <div class="logo">
                 <a href="#hero" class="logo-link" aria-label="Small Batch Maps - Go to homepage">
-                    <img src="images/logo-point.png" alt="Small Batch Maps compass logo" class="logo-image"
+                    <img src="images/logo-point-2.png" alt="Small Batch Maps compass logo" class="logo-image"
                         loading="eager" />
                     Small Batch Maps
                 </a>
@@ -77,7 +77,7 @@
             <div class="hero-bg" aria-hidden="true"></div>
             <div class="hero-content">
                 <div class="hero-title-container">
-                    <img src="images/logo-point.png" alt="Small Batch Maps compass logo" class="hero-logo"
+                    <img src="images/logo-point-2.png" alt="Small Batch Maps compass logo" class="hero-logo"
                         loading="eager" />
                     <div class="hero-text-content">
                         <h1 id="hero-title" class="hero-title animate-fade-in">
@@ -283,48 +283,7 @@
                     <div class="cartography-expansion">
                         <!-- Section Intro -->
                         <div class="carto-header">
-                            <div class="carto-workflow-diagram">
-                                <h4 class="workflow-main-title">WEB CARTOGRAPHY<br>WORKFLOW</h4>
-                                <p class="workflow-subtitle">a user-centered, performance-oriented<br>process for
-                                    interactive mapping</p>
-
-                                <div class="workflow-steps">
-                                    <div class="workflow-step">
-                                        <h5 class="step-title">USER & TASK ANALYSIS</h5>
-                                        <p class="step-description">Define purpose, audience, ethics, data trust</p>
-                                    </div>
-
-                                    <div class="workflow-step">
-                                        <h5 class="step-title">DATA ACQUISITION & PREPARATION</h5>
-                                        <p class="step-description">ETL workflows, data cleaning, tile-ready formats</p>
-                                    </div>
-
-                                    <div class="workflow-step">
-                                        <h5 class="step-title">CARTOGRAPHIC REPRESENTATION</h5>
-                                        <p class="step-description">Symbolization, classification, hierarchy</p>
-                                    </div>
-
-                                    <div class="workflow-step">
-                                        <h5 class="step-title">MAP INTERACTION DESIGN</h5>
-                                        <p class="step-description">Zoom, pan, filter, search, mobile responsiveness</p>
-                                    </div>
-
-                                    <div class="workflow-step">
-                                        <h5 class="step-title">PERFORMANCE ENGINEERING</h5>
-                                        <p class="step-description">Lazy loading, vector tiles, CDN distribution</p>
-                                    </div>
-
-                                    <div class="workflow-step">
-                                        <h5 class="step-title">VERSION CONTROL & AUTOMATION</h5>
-                                        <p class="step-description">GitHub Actions, CI/CD, modular builds</p>
-                                    </div>
-
-                                    <div class="workflow-step">
-                                        <h5 class="step-title">EVALUATION & ITERATION</h5>
-                                        <p class="step-description">User feedback loops, analytics, A/B testing</p>
-                                    </div>
-                                </div>
-                            </div>
+                            <img id="carto-workflow-image" src="images/workflow.png" alt="Web Cartography Workflow diagram showing a user-centered, performance-oriented process for interactive mapping" class="carto-workflow-image" loading="lazy">
 
                             <div class="carto-left-content">
 
