--- a/index.html
+++ b/index.html
@@ -620,8 +620,7 @@
     <section id="projects" class="projects" aria-labelledby="projects-title">
         <div class="container">
             <h2 id="projects-title" class="section-title">Recent Projects</h2>
-            <p class="section-subtitle">Explore my applications of geospatial data science and web cartography. And
-                please <a href="#contact">get in touch</a> if you'd like to discuss a project.</p>
+            <p class="section-subtitle">Explore how I integrate geospatial data science with full-stack design—building tools, workflows, and visualizations that make complex systems intelligible. If something resonates, I’d love to connect.</p>
 
             <div class="projects-grid" role="group" aria-labelledby="projects-title">
                 <article class="project-item" role="button" tabindex="0"
